--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,11 +35,20 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-
   mask_text_input_formatter: ^2.9.0
+  mobx: ^2.3.3+2
+  #https://pub.dev/packages/flutter_mobx
+  flutter_mobx: ^2.0.6+5
+  get_it: ^7.2.0
+  get: ^4.6.6
 
+  window_size:
+    git:
+      url: https://github.com/google/flutter-desktop-embedding
+      path: plugins/window_size
 
 dev_dependencies:
+  build_runner: any
   flutter_test:
     sdk: flutter
 
@@ -50,13 +59,18 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
 
+  mobx_codegen: ^2.6.1
+
+  sqflite_common_ffi: ^2.3.3
+
+  path_provider: ^2.1.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
 flutter:
-
+  generate: true
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
